--- a/login.html
+++ b/login.html
@@ -3,19 +3,25 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div>
-		<div>用户登录</div>
-		<div>
-			<div>
+	<div class="loginer">
+		<div class="userlogin">用户登录</div>
+		<div class="users">
+			<div class="user">
 				<label>用户</label>
 				<input type="text">
 			</div>
-			<div>
+			<div class="password">
 				<label>密码</label>
 				<input type="text">
 			</div>
+			<div class="login">
+				<button id="userlogin">登录</button>
+				<button id="refuse">取消</button>
+			</div>
+
 		</div>
 	</div>
 </body>
