--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
 			</div>
 			<div class="password">
 				<label>密码</label>
-				<input type="text">
+				<input type="password">
 			</div>
 			<div class="login">
 				<button id="userlogin">登录</button>
