--- a/login.html
+++ b/login.html
@@ -18,10 +18,9 @@
 				<input type="password">
 			</div>
 			<div class="login">
-				<button id="userlogin">登录</button>
-				<button id="refuse">取消</button>
+				<button id="loging" class="log">登录</button>
+				<button id="refuse" class="refuser">取消</button>
 			</div>
-
 		</div>
 	</div>
 </body>
